halfway commit